# ToyKV

./: .clang-format  .clang-tidy  CMakeLists.txt  batch.cpp  batch.hpp  cache.hpp  crc32.hpp  db.cpp  db.hpp  encoding.hpp  errors.cpp  errors.hpp  file.hpp  indexer.hpp  main.cpp  option.hpp  preclude.hpp  record.hpp  segment.hpp  snowflake.hpp  wal.hpp
cmake/: add_external.cmake
tests/: CMakeLists.txt  batch_test.cpp  db_test.cpp  encoding_test.cpp  ramdom_data.hpp  segment_test.cpp  snowflake_test.cpp  wal_test.cpp
